--- a/styles/fourty-section.css
+++ b/styles/fourty-section.css
@@ -1,7 +1,8 @@
 #fourty-section>.container-fluid {
-        background: url('../assets/pattern-dourado-opc.png');
+    background: url('../assets/pattern-dourado-opc.png');
 
     background-size: 8rem;
+    border-radius: 80px 0px 80px 0;
 
     color: white !important;
 }
