--- a/styles/dark-sections.css
+++ b/styles/dark-sections.css
@@ -1,5 +1,5 @@
 .dark-section {
-    background-color: #46424A;
+    background-color: #46424A !important;
     border-radius: 80px 0px 80px 0;
 }
 
