--- a/styles/fifth-section.css
+++ b/styles/fifth-section.css
@@ -1,9 +1,8 @@
 #fifth-section {
-    background-color: #f2f2f2;
-
     .card-about {
         border-radius: 15px;
-        background: linear-gradient(to bottom, #C2A152, #ffce59); /* Gradiente do laranja ao amarelo */
+        border-left: 10px solid #C2A152;
+        /* background: linear-gradient(to bottom, #C2A152, #ffce59);  */
 
         -webkit-box-shadow: 1px 1px 5px 0px rgba(105, 105, 105, 0.43);
         -moz-box-shadow: 1px 1px 5px 0px rgba(105, 105, 105, 0.43);
